modifying some of the supps

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -441,14 +441,12 @@ The authors declare no competing interests.
 
 \label{SI:Methods}
 
-    \subsection{STAN model code}
+    \subsection{Model code and parameterisation}
     \label{SI:modelcode}
-    The following code specifies the joint model framework used to estimate the interaction matrix described in the Methods. It can be copied into a text editor and saved with a .stan extension for use with STAN. \\
+    
 
-    This code is also available in the Supplementary Methods zip folder under the name 'joint\_model.stan', alongside the R scripts and functions used to prepare the data and call upon STAN to run the model. \\
-
-    We make the several observations in addition to the comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
-    Secondly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. We define the effect parameters as a unit vector, which means we only require K-1 degrees of freedom (where K is the total number of neighbour elements) to estimate all effect values. This loss of a degree of freedom arises from the fact that the matrix of $r_i$ $e_j$ parameters is of rank 1. The first response parameter is also forced to positive. This improves convergence by providing an anchor for all other parameter values to 'rotate' around. Though these latter two have implications for our estimates of the latent variables $r_i$ and $e_j$, estimates for identifiable and unidentifiable interactions should not be affected.
+    We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. Our github repository also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
+    Secondly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_{d_k}$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. We define the effect parameters as a unit vector, which means we only require K-1 degrees of freedom (where K is the total number of neighbour elements) to estimate all effect values. This loss of a degree of freedom arises from the fact that the matrix of $r_{d_k}$ $e_j$ parameters is of rank 1. The first response parameter is also forced to positive. This improves convergence by providing an anchor for all other parameter values to 'rotate' around. Though these latter two have implications for our estimates of the latent variables $r_{d_k}$ and $e_j$, estimates for identifiable and unidentifiable interactions should not be affected.
 
     % \includepdf[pages=-]{../joint_model.stan.pdf}
 
@@ -463,7 +461,7 @@ The authors declare no competing interests.
         We applied this framework to annual wildflower community dataset from Western Australia. This system is a diverse and well-studied community of annual plants which germinate, grow, set seed and die within approximately 4 months every year. Individual fecundity data were collected in 2016, when 100 50 x 50 cm plots established in the understory of West Perenjori Reserve (29$^o$28'01.3"S 116$^o$12'21.6"E) were monitored over the length of the full field season. The resulting dataset includes between 29 to over 1000 counts of individual plant seed production from 22 different focal species (with a median of 108 observations per species), in addition to the identity and densities of all neighbouring individuals within the interaction neighbourhood of each focal plant. Interaction neighbourhoods varied in radius from 3 to 5 cm depending on the size of the focal species \parencite{Martyn2020}. Total neighbourhood diversity was 71 wildflower species, 19 of which were recorded fewer than 10 times across the whole dataset. The species-specific effects of this latter group of species on focals were deemed negligible due to their extremely low density, they were thus grouped into an 'other' category and their effects on focals averaged. This resulted in 53 potential neighbour identities. Half of all plots were thinned (a quarter to 60\% diversity and a quarter to 30\%) to mitigate possible confounding effects between plot location and plant density, and thinning did not target any particular species. 
 
         \paragraph{}
-    \textbf{In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring elements and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. Environmental data known to affect performance can also be recorded and included in the model (as a random effect for example) to minimise those confounding effects.}
+    	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring elements and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. Environmental data known to affect performance can also be recorded and included in the model (as a random effect for example) to minimise those confounding effects.
 
         \paragraph{} 
         We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into per-capita interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
@@ -477,7 +475,7 @@ The authors declare no competing interests.
         \label{SI:popdyn}
 
         \paragraph{}
-        The above model framework returns species-specific estimates of intrinsic fitness ($\beta_{i0}$), as well as as a species x neighbour matrix $B$ of identifiable ($\beta_{ij}$) and unidentifiable ($r_i e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the density or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. Importantly, it is necessary to specifiy a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
+        The above model framework returns species-specific estimates of intrinsic fitness ($\gamma_{d_k}$), as well as as a species x neighbour matrix $B$ of identifiable ($\beta_{d_k, j}$) and unidentifiable ($r_{d_k} e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the density or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. Importantly, it is necessary to specifiy a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
 
         \paragraph{} 
         We defined the following model for annual plants with a seed bank \parencite{Levine2009, Mayfield2017, Bimler2018} which describe the rate of change in a focal species' \textit{i} abundance of seeds in a seed bank from one year to the next: 
@@ -565,19 +563,19 @@ The authors declare no competing interests.
 
     \begin{figure}[H]
         \includegraphics[width=\textwidth]{../../3.analyses/figures/joint_network.png}
-        \caption{The full network of interactions between 22 focal species as estimated by the joint modelling framework presented here. Arrows point to species $i$ and line thickness denotes median interaction strength over 1000 samples drawn from the 80\% posterior confidence interval of each parameter. Facilitative interactions are shown in yellow and competitive interactions are shown in blue.}
+        \caption{The full network of interactions between 22 focal species as estimated by the joint modelling framework presented here. Arrows point to species $i$ and line thickness denotes median interaction strength over 1000 samples drawn from the 80\% posterior confidence interval of each parameter. Facilitative interactions are shown in blue and competitive interactions are shown in yellow.}
         \label{fig:jointnetwork}
     \end{figure}
 
     \begin{figure}[H]
         \includegraphics[width=\textwidth]{../../3.analyses/figures/NDDM_network.png}
-        \caption{Network of identifiable interactions between 22 focal species as estimated by the NDD model, unidentifiable interactions are not shown here. Arrows point to species $i$ and line thickness denotes median interaction strength over 1000 samples drawn from the 80\% posterior confidence interval of each parameter. Facilitative interactions are shown in yellow and competitive interactions are shown in blue.}
+        \caption{Network of identifiable interactions between 22 focal species as estimated by the NDD model, unidentifiable interactions are not shown here. Arrows point to species $i$ and line thickness denotes median interaction strength over 1000 samples drawn from the 80\% posterior confidence interval of each parameter. Facilitative interactions are shown in blue and competitive interactions are shown in yellow.}
         \label{fig:jointnetwork}
     \end{figure}
 
     \begin{figure}[H]
         \includegraphics[width=\textwidth]{../../3.analyses/figures/RIM_noninferrables_network.png}
-        \caption{Network of unidentifiable interactions between 22 focal species as estimated by the RI Model. Arrows point to species $i$ and line thickness denotes median interaction strength over 1000 samples drawn from the 80\% posterior confidence interval of each parameter. Facilitative interactions are shown in yellow and competitive interactions are shown in blue.}
+        \caption{Network of unidentifiable interactions between 22 focal species as estimated by the RI Model. Arrows point to species $i$ and line thickness denotes median interaction strength over 1000 samples drawn from the 80\% posterior confidence interval of each parameter. Facilitative interactions are shown in blue and competitive interactions are shown in yellow.}
         \label{fig:jointnetwork}
     \end{figure}
 
