--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -68,7 +68,7 @@ Number of words - main text: 5608\\
 % methods 2434 (175+279+168+282+163+322+173+239+492+141)
 % results 1124 (71+462+591)
 % discussion 1357 (895+278+184)
-4 Figures in main text.\\
+3 Figures in main text.\\
 Number of references: 85\\
 
 \noindent
@@ -90,9 +90,9 @@ Data will be submitted to Dryad upon publication.
 \section*{Abstract}
     
     \begin{enumerate}
-    \item{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare.}
-    \item{We present a novel modelling framework which estimates the strength of identifiable and unidentifiable interactions in diverse horizontal systems, using measures of element performance in the presence of varying densities of their potential interaction partners.}
-    \item{The resulting interaction matrices can include positive and negative effects, the effect of an element on itself, and are non-symmetrical.} 
+    \item{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Such networks are built from matrices which describe the effect of an element on another. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare.}
+    \item{We present a novel modelling framework which estimates the strength of identifiable and unidentifiable interactions in diverse horizontal systems, using measures of species performance in the presence of varying densities of their potential interaction partners.}
+    \item{The resulting interaction matrices can include positive and negative effects, the effect of a species on itself, and are non-symmetrical.} 
     \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
 \end{enumerate}
 % Can lengthen abstract for MEE
