--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -104,18 +104,18 @@ Data will be submitted to Dryad upon publication.
     In many biological systems, interactions between system elements (be these species, individuals, etc.) affect performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}.
 
     \paragraph{}
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These species and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
 
     %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... Can be kept for MEE
     %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
     %% [Keep this if I have enough spare words]
 
     \paragraph{} 
-    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. 'Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth. The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different nodes is typically skewed, with a few elements making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer elements especially may not be observed simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    In many horizontal systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. 'Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth. The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both identifiable and unidentifiable interactions, from measures of performance in the absence and presence of different interaction partners. We present the model code in STAN, a Bayesian statistical language which is flexible to a high number of parameters, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this  dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We show the benefits of this approach by comparing a range of findings from our case study to the results derived from a spatial-abundance association network, a common alternative to estimating interactions in ecology. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
+    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both identifiable and unidentifiable interactions, from measures of performance in the absence and presence of different interaction partners. We implement the model in STAN, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We showcase the advantages of this approach by illustrating a range of findings from our case study. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
 
 
 \section{Methods}
