--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -62,12 +62,12 @@
 
 
 \noindent
-Number of words - Abstract: 144\\
-Number of words - main text: 5608\\
-% intro 693
-% methods 2434 (175+279+168+282+163+322+173+239+492+141)
-% results 1124 (71+462+591)
-% discussion 1357 (895+278+184)
+Number of words - Abstract: 165\\
+Number of words - main text: 5379\\
+% intro 677
+% methods 2335 (175+265+252+199+132+311+166+239+455+141)
+% results 1013 (71+327+615)
+% discussion 1354 (906+264+184)
 3 Figures in main text.\\
 Number of references: 85\\
 
@@ -496,7 +496,7 @@ The authors declare no competing interests.
         \end{equation}
 
         \begin{equation}
-        \gamma  = ln(\eta_{i}) = ln(\frac{\lambda_{i} g_{i}}{\theta_{i}})
+        \gamma_{d_k}  = ln(\eta_{i}) = ln(\frac{\lambda_{i} g_{i}}{\theta_{i}})
         \end{equation}
         % Daniel thinks this last equation is wrong but I don't think so?
         As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. Because intrinsic fitness is estimated by the model framework and not directly observed, we used the mean of the $\gamma_{d_k}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
