editing the limitations section

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -69,7 +69,7 @@ Number of words - main text: 5379\\
 % results 1013 (71+327+615)
 % discussion 1354 (906+264+184)
 3 Figures in main text.\\
-Number of references: 85\\
+Number of references: 84\\
 
 \noindent
 \textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, interaction strength, per-capita interactions, annual plants.  
@@ -327,7 +327,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
 
     \paragraph{}
-    Our novel framework includes a versatile approach for estimating interactions between species which are not observed to cooccur. Care should be taken, however, that these unidentifiable interactions do not dominate resulting networks. Identifiable interactions are estimated with a unique parameter, as opposed to the latent variables used to quantify unidentifiable interactions. It is also important to consider the likely reasons for unidentifiable interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+    Our novel framework includes a versatile approach for estimating interactions between species which are not observed to cooccur. Identifiable interactions are estimated with a unique parameter, as opposed to the latent variables used to quantify unidentifiable interactions. Care should therefore be taken to assess the different assumptions behind our estimatation of identifiable and unidentifiable interactions, and how well these may apply to any particular system.I t is also important to consider the likely reasons for unidentifiable interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
 
         %\paragraph{}
         %Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Our framework also evaluates direct interactions only, and does not consider higher-order interactions \parencite{}. 
